--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: objective-c
 osx_image: xcode10
-xcode_project: barXtemp.xcodeproj
-xcode_scheme: barXtemp
-xcode_sdk: macosx10.14
+script: "set -o pipefail && xcodebuild -project barXtemp.xcodeproj -scheme barXtemp -sdk macosx10.14 build | xcpretty"
